@@ -74,14 +74,25 @@ scale_to_index (VideoContentScale scale)
 VideoPanel::VideoPanel (ContentPanel* p)
 	: ContentSubPanel (p, _("Video"))
 {
+	wxBoxSizer* reference_sizer = new wxBoxSizer (wxVERTICAL);
+
+	_reference = new wxCheckBox (this, wxID_ANY, _("Use this DCP's video as OV and make VF"));
+	reference_sizer->Add (_reference, 0, wxLEFT | wxRIGHT | wxTOP, DCPOMATIC_SIZER_GAP);
+
+	_reference_note = new wxStaticText (this, wxID_ANY, _(""));
+	_reference_note->Wrap (200);
+	reference_sizer->Add (_reference_note, 0, wxLEFT | wxRIGHT, DCPOMATIC_SIZER_GAP);
+	wxFont font = _reference_note->GetFont();
+	font.SetStyle(wxFONTSTYLE_ITALIC);
+	font.SetPointSize(font.GetPointSize() - 1);
+	_reference_note->SetFont(font);
+
+	_sizer->Add (reference_sizer);
+
 	wxGridBagSizer* grid = new wxGridBagSizer (DCPOMATIC_SIZER_X_GAP, DCPOMATIC_SIZER_Y_GAP);
 	_sizer->Add (grid, 0, wxALL, 8);
 
 	int r = 0;
-
-	_reference = new wxCheckBox (this, wxID_ANY, _("Use this DCP's video as OV and make VF"));
-	grid->Add (_reference, wxGBPosition (r, 0), wxGBSpan (1, 2));
-	++r;
 
 	add_label_to_sizer (grid, this, _("Type"), true, wxGBPosition (r, 0));
 	_frame_type = new ContentChoice<VideoContent, VideoFrameType> (
@@ -215,9 +226,6 @@ VideoPanel::VideoPanel (ContentPanel* p)
 
 	_description = new wxStaticText (this, wxID_ANY, wxT ("\n \n \n \n \n"), wxDefaultPosition, wxDefaultSize);
 	grid->Add (_description, wxGBPosition (r, 0), wxGBSpan (1, 4), wxEXPAND | wxALIGN_CENTER_VERTICAL, 6);
-	wxFont font = _description->GetFont();
-	font.SetStyle(wxFONTSTYLE_ITALIC);
-	font.SetPointSize(font.GetPointSize() - 1);
 	_description->SetFont(font);
 	++r;
 
@@ -464,7 +472,7 @@ VideoPanel::setup_sensitivity ()
 
 	string why_not;
 	bool const can_reference = dcp && dcp->can_reference_video (why_not);
-	setup_refer_button (_reference, dcp, can_reference, why_not);
+	setup_refer_button (_reference, _reference_note, dcp, can_reference, why_not);
 
 	if (_reference->GetValue ()) {
 		_frame_type->wrapped()->Enable (false);
