@@ -1,3 +1,8 @@
+2018-03-27  Carl Hetherington  <cth@carlh.net>
+
+	* Use a label rather than a tooltip to tell users why they can't
+	refer to DCPs.
+
 2018-03-26  Carl Hetherington  <cth@carlh.net>
 
 	* Add real-time mouse cursor readout in audio analysis (rest of #1082)
